welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: Unit does not take parameters
	{setPos(0, y=y+1)}
        ^